syntax = "proto3";
package messages;

import "google/protobuf/empty.proto";

service ItemStore {
    // Get all events for the given aggregate and event
    rpc GetItems (google.protobuf.Empty) returns (ItemResponse) {
    }
}

message Item {
    uint32 ID = 1;
    string Name = 2;
    string Icon = 3;
    string Description = 4;
    string Type = 5;
    string Rarity = 6;
    uint32 Level = 7;
    uint32 VendorValue = 8;
}

message ItemIdsRequest{
    string batchUUID = 1;
    repeated uint32 itemIds = 2;
}

message ItemBatch{
    string batchUUID = 1;
    bytes itemData = 2;
}

message ItemResponse {
    uint32 item_id = 1;
}