syntax = "proto3";
package messages;

// ArticlePrice Listings for a specific item (highest buy, lowest sell)
message prices {
    uint32 id = 1;
    bool whitelisted = 2;
    int64 fetch_datetime = 3;

    // Price includes quantity and the high/low price
    message BUYS {
        uint32 quantity = 1;
        uint32 unit_price = 2;
    }

    BUYS buys = 4;

    // Price includes quantity and the high/low price
    message SELLS {
        uint32 quantity = 1;
        uint32 unit_price = 2;
    }

    SELLS sells = 5;
    string aggregate_id = 6;
}

message pricesRequest {
    uint32 page = 1;
    uint32 pageSize = 2;
}